--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ h2 strong {
   width:300px;
   padding:5jpx;
   background-color:white;
-  margin:10px 0 10px 20px;
+  margin:10px 0px 10px 20px;
 }
 
 #side-content {
